# StarStats

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EAC-SAFETY.md  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  turbo.json
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: api-contract-reviewer.md  migration-safety-reviewer.md
.claude/hooks/: protect-migrations.mjs  rustfmt-on-edit.mjs
.claude/skills/new-store/: SKILL.md
.claude/skills/regen-openapi/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  parser-rule-request.yml
.github/workflows/: ci.yml  release-images.yml  release.yml
apps/tray-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tray-ui/src/: App.tsx  api.ts  main.tsx  styles.css  updater.ts
apps/tray-ui/src/components/: EventSparkline.tsx  HealthCard.test.tsx  HealthCard.tsx  InlineCheck.test.tsx  InlineCheck.tsx  LogsPane.tsx  ReingestCard.tsx  ReparseCard.tsx  SettingsPane.tsx  StatusPane.tsx  TransactionsCard.tsx  TrayHeader.tsx
apps/tray-ui/src/hooks/: useFieldFocus.tsx  useHealth.ts  useStatusPolling.ts
apps/tray-ui/src/lib/: friendlyError.test.ts  friendlyError.ts  profileUrl.ts  useHealthStrings.test.ts  useHealthStrings.ts
apps/tray-ui/src/styles/: starstats-tokens.css
apps/tray-ui/src/submissions/: PiiToggle.test.tsx  PiiToggle.tsx  ReviewPane.test.tsx  ReviewPane.tsx  SubmissionsPane.test.tsx  SubmissionsPane.tsx
apps/tray-ui/src/test/: setup.ts
apps/tray-ui/src/timeline/: CollapsedGroupRow.test.tsx  CollapsedGroupRow.tsx  EntitySection.test.tsx  EntitySection.tsx  InferredBadge.test.tsx  InferredBadge.tsx  Timeline.test.tsx  (+3 more)
apps/web/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts
apps/web/e2e/: admin.spec.ts  auth.spec.ts  dashboard.spec.ts  orgs.spec.ts  public-profile.spec.ts  settings.spec.ts
apps/web/src/: instrumentation.ts
crates/starstats-client/: Cargo.toml  README.md  tauri.conf.json
crates/starstats-client/capabilities/: default.json
crates/starstats-client/examples/: inspect.rs  reset_cursor.rs
crates/starstats-client/sql/: schema.sql
crates/starstats-client/src/: backfill.rs  burst_rules.rs  commands.rs  config.rs  crashes.rs  discovery.rs  gamelog.rs  hangar.rs  health.rs  launcher.rs  main.rs  parser_defs.rs  probes.rs  process_guard.rs  secret.rs  state.rs  storage.rs  sync.rs
crates/starstats-client/wix/: upgrade_metadata.wxs
crates/starstats-core/: Cargo.toml
crates/starstats-core/examples/: coverage.rs
crates/starstats-core/src/: events.rs  inference.rs  lib.rs  metadata.rs  parser.rs  parser_defs.rs  templates.rs  transactions.rs  unknown_lines.rs  validators.rs  wire.rs
crates/starstats-core/tests/: fixture_replay.rs
crates/starstats-core/tests/fixtures/: sample_game_log.txt
crates/starstats-server/: .env.example  Cargo.toml  Dockerfile
crates/starstats-server/migrations/: 0001_events.sql  0002_audit_log.sql  0003_event_seq.sql  0004_users.sql  0005_devices.sql  0006_email_verification.sql  0007_organizations.sql  0008_auth_email_flows.sql  0009_rsi_verify.sql  0010_login_factors.sql  0011_profile_snapshot.sql  0012_reference_data.sql  0013_hangar.sql  0014_rsi_orgs.sql  0015_user_preferences.sql  0016_submissions.sql  0017_supporter_status.sql  0018_revolut_orders.sql  0019_staff_roles.sql  0020_smtp_config.sql  0021_share_scopes.sql  0022_reference_registry.sql  0023_share_metadata.sql  0024_event_hidden.sql  0025_per_share_scopes.sql  0026_ingest_batches_device_id.sql  0027_share_reports.sql  0028_users_shares_paused.sql  0029_parser_submissions.sql
crates/starstats-server/src/: admin_org_routes.rs  admin_reference_routes.rs  admin_routes.rs  admin_sharing_routes.rs  admin_submission_routes.rs  admin_user_routes.rs  api_error.rs  audit.rs  audit_mirror.rs  auth.rs  auth_routes.rs  config.rs  device_routes.rs  devices.rs  hangar_routes.rs  hangar_store.rs  health.rs  ingest.rs  kek.rs  locations.rs  magic_link.rs  magic_link_routes.rs  mail.rs  main.rs  openapi.rs  orders.rs  org_routes.rs  orgs.rs  parser_def_routes.rs  parser_submissions.rs  preferences_routes.rs  preferences_store.rs  profile_store.rs  query.rs  recovery_codes.rs  reference_data.rs  reference_routes.rs  reference_store.rs  repo.rs  revolut.rs  (+24 more)
design/: DESIGN_REFERENCE.md  README-staging.md  README.md
design/prototype/: StarStats Prototype.html  StarStats Responsive Canvas.html  app-screens.jsx  app.jsx  auth-screens.jsx  data-screens.jsx  donate.jsx  icons.jsx  my-logs.jsx  settings-and-system.jsx  shell-and-landing.jsx
design/tray-prototype/: StarStats Tray UI.html  primitives.jsx  quantum-warp.jsx  tokens.css  tray-app.jsx  tray-logs.jsx
docs/: ARCHITECTURE.md  AUDIT.md  DESIGN-METRICS-IMPLEMENTATION-PLAN.md  DESIGN-METRICS-PLAN.md  DESIGN-REDESIGN-PLAN.md  HOMELAB-INTEGRATION.md  OBSERVABILITY.md  PARSER_DEFINITION_UPDATES.md  REFERENCE-CATALOG-HIERARCHY.md  REVOLUT-INTEGRATION-PLAN.md  TRAY-REDESIGN-PLAN.md  WINDOWS_INSTALLER_UPGRADE.md
docs/superpowers/plans/: 2026-05-16-tray-setup-health.md  2026-05-17-event-handling-improvements.md
docs/superpowers/specs/: 2026-05-16-tray-setup-health-design.md  2026-05-17-event-handling-improvements-design.md
infra/init/: Dockerfile  init-databases.sh
infra/loki/: Dockerfile  config.yaml
infra/otel-collector/: Dockerfile  config.yaml
infra/prometheus/: Dockerfile  prometheus.yml
infra/spicedb/: schema.zed
infra/tempo/: Dockerfile  config.yaml
memory/: MEMORY.md
prototypes/python-spike/: .env.example  pyproject.toml
prototypes/python-spike/src/starstats/: __main__.py  cli.py  config.py  db.py
prototypes/python-spike/src/starstats/gamelog/: events.py  parser.py  tail.py
prototypes/python-spike/src/starstats/rsi/: client.py  scrape.py
prototypes/python-spike/tests/: test_smoke.py
release-manifests/: alpha.json  beta.json  live.json  rc.json
scripts/: generate-updater-manifest.mjs
(+114 files in other folders)
