[package]
name = "starstats-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared types, parser, validators for StarStats client and server"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
regex.workspace = true
once_cell.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1"

[lints]
workspace = true
